# biosense_ml

./: .gitignore  CLAUDE.md  Makefile  README.md  progress.txt  pyproject.toml  requirements.txt  sigmoid_mismatch.html
configs/: config.yaml
notebooks/: exploration.ipynb
scripts/: build_gaze_dataset.py  build_trajectory_dataset.py  compute_temporal_variance.py  encode_latents.py  eval.py  eval_gaze.py  eval_trajectory.py  generate_centroid_videos.py  generate_gaze_rollout.py  monitor_preprocess_and_retrain.sh  plot_trajectory_eval.py  preprocess.py  sanity_check_trajectory.py  train.py  train_autoencoder.py  train_conv_rssm.py  train_gaze.py  train_rssm.py  train_trajectory.py  verify_gaze_dataset.py  vis_trajectory_rollout.py
slurm/: build_gaze_dataset.sh  build_trajectory.sh  conv_rssm_32x32_rollout_videos.sh  conv_rssm_32x32_sdw2_videos.sh  conv_rssm_32x32_videos_generic.sh  conv_rssm_diagnostics.sh  conv_rssm_rollout_video.sh  dev_train.sh  dev_trajectory.sh  encode_latents.sh  encode_latents_32x32x8.sh  eval_gaze.sh  eval_trajectory.sh  generate_gaze_rollout.sh  preprocess.sh  recon_video_32x32x8.sh  rssm_rollout_video.sh  rssm_train_long.sh  rssm_trajectory_dist.sh  sanity_check.sh  sanity_conv_rssm.sh  sanity_trajectory.sh  submit_autoencoder.sh  submit_gaze_pipeline.sh  submit_preprocess.sh  submit_train.sh  train_ae_32x32x8.sh  train_conv_rssm.sh  train_conv_rssm_32x32.sh  train_conv_rssm_32x32_a1.5.sh  train_conv_rssm_32x32_a2.0.sh  train_conv_rssm_32x32_a3.0.sh  train_conv_rssm_32x32_bkl01.sh  train_conv_rssm_32x32_bkl05.sh  train_conv_rssm_32x32_sdw2.sh  (+9 more)
(+70 files in other folders)
